# twitter.archetype

./: README.md  archetype.rhai  archetype.yaml
contents/base/{{ project-name }}/: Dockerfile  README.md  pyproject.toml
contents/base/{{ project-name }}/.github/workflows/: build-dev.yml  build_docker_container.yml
contents/base/{{ project-name }}/manage/: docker.py
contents/base/{{ project-name }}/src/{{ project_name }}/utils/: configuration.py
contents/package/{{ project-name }}/src/{{ project_name }}/{{ package_name }}/: source.py
contents/package/{{ project-name }}/tests/: test_{{ package_name }}.py
